@@ -8,3 +8,7 @@ Philip W. Dalrymple
 Authors of the pwquality library:
 
 Tomáš Mráz		<tm@t8m.info>
+
+Python3 port of the python module:
+
+Bohuslav Kabrda		<bkabrda@redhat.com>
