@@ -29,7 +29,7 @@ pwqmodule = Extension('pwquality',
 
 setup(
     name = 'pwquality',
-    version = '0.9.1',
+    version = '@VERSION@',
     description = 'Python bindings for the libpwquality library for password quality checking',
     author = 'Tomáš Mráz',
     author_email = 'tm@t8m.info',
