@@ -1,3 +1,15 @@
+2014-08-06  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* m4/gettext.m4: Upgrade to gettext-0.18.2.
+	* m4/iconv.m4: Upgrade to gettext-0.18.2.
+	* m4/lib-ld.m4: Upgrade to gettext-0.18.2.
+	* m4/lib-link.m4: Upgrade to gettext-0.18.2.
+	* m4/lib-prefix.m4: Upgrade to gettext-0.18.2.
+	* m4/nls.m4: Upgrade to gettext-0.18.2.
+	* m4/po.m4: Upgrade to gettext-0.18.2.
+	* m4/progtest.m4: Upgrade to gettext-0.18.2.
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.18.2.
+
 2011-09-16  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* m4/gettext.m4: New file, from gettext-0.18.1.
